# ai-foundry-isv-mcp-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
ai_foundry_agent/: __init__.py
docs/: AIFoundryAgent.md  MCPClient.md  Security.md  Setup.md  architecture-diagram.drawio
docs/mcp_server/: MCPServer.md  MongoDBMCPServer.md  SnowflakeMCPServer.md  SnowflakeManagedMCPServer.md
mcp_client/: client.py
mcp_client/streamlit/: app.py
mcp_server/mongodb/: deploy_mcp_aci_template.yaml
mcp_server/snowflake/: Dockerfile  deploy_mcp_aci_template.yaml  tools_config_template.yaml
